# eflux

./: .gitignore  CONTRIBUTING.md  DISCLAIMER  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
JOSS-Manuscript/: Eflux3_flowchart.md  paper.bib  paper.md
notebooks/: eflux_testbed.ipynb
src/eflux/: __init__.py  eflux2.py  eflux3.py  utils.py
tests/: conftest.py  fixtures.py  test_eflux.py  test_utils.py
tests/test_models/: test_model.json  test_model.mat  test_model.xml  test_model.yml
utils/: utils.py
